--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1077,6 +1077,9 @@ a {
 .cid-ucLRg2Y94t P {
   color: #ffffff;
 }
+.cid-ucLRg2Y94t H5 {
+  color: #40b0bf;
+}
 .cid-s48OLK6784 {
   z-index: 1000;
   width: 100%;
