--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -949,138 +949,6 @@ a {
 .cid-ubzLC2tpVA .mbr-description {
   color: #e6c63b;
 }
-.cid-ucLRg2Y94t {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #000000;
-}
-@media (min-width: 992px) {
-  .cid-ucLRg2Y94t .carousel {
-    min-height: 800px;
-  }
-  .cid-ucLRg2Y94t .carousel img {
-    max-height: 800px;
-    object-fit: contain;
-  }
-}
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-ucLRg2Y94t .carousel {
-    min-height: 520px;
-  }
-  .cid-ucLRg2Y94t .carousel img {
-    max-height: 520px;
-    object-fit: contain;
-  }
-}
-@media (max-width: 767px) {
-  .cid-ucLRg2Y94t .carousel {
-    min-height: 440px;
-  }
-  .cid-ucLRg2Y94t .carousel img {
-    max-height: 440px;
-    object-fit: contain;
-  }
-  .cid-ucLRg2Y94t .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-ucLRg2Y94t .content-slider-wrap {
-    width: 100% !important;
-  }
-}
-.cid-ucLRg2Y94t .carousel,
-.cid-ucLRg2Y94t .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-ucLRg2Y94t .item-wrapper {
-  width: 100%;
-}
-.cid-ucLRg2Y94t .carousel-caption {
-  bottom: 40px;
-}
-.cid-ucLRg2Y94t .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-.cid-ucLRg2Y94t .mobi-mbri-arrow-next {
-  margin-left: 5px;
-}
-.cid-ucLRg2Y94t .mobi-mbri-arrow-prev {
-  margin-right: 5px;
-}
-.cid-ucLRg2Y94t .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-ucLRg2Y94t .carousel-control {
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-ucLRg2Y94t .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-ucLRg2Y94t .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-ucLRg2Y94t .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-ucLRg2Y94t .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-ucLRg2Y94t .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-ucLRg2Y94t .carousel-indicators li.active,
-.cid-ucLRg2Y94t .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-ucLRg2Y94t .carousel-indicators li::after,
-.cid-ucLRg2Y94t .carousel-indicators li::before {
-  content: none;
-}
-.cid-ucLRg2Y94t .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-ucLRg2Y94t .carousel-indicators {
-    display: none !important;
-  }
-}
-.cid-ucLRg2Y94t P {
-  color: #ffffff;
-}
-.cid-ucLRg2Y94t H5 {
-  color: #bed3f9;
-  text-align: left;
-}
 .cid-s48OLK6784 {
   z-index: 1000;
   width: 100%;
@@ -1488,4 +1356,111 @@ a {
 }
 .cid-s48P1Icc8J .media-container-row .row-copirayt p {
   width: 100%;
+}
+.cid-udqOItb0WA {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #fafafa;
+}
+.cid-udqOItb0WA .carousel {
+  height: 800px;
+}
+.cid-udqOItb0WA .carousel img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.cid-udqOItb0WA .carousel-item,
+.cid-udqOItb0WA .carousel-inner {
+  height: 100%;
+}
+.cid-udqOItb0WA .carousel-caption {
+  bottom: 40px;
+}
+.cid-udqOItb0WA .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-udqOItb0WA .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-udqOItb0WA .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+.cid-udqOItb0WA .item-wrapper {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .cid-udqOItb0WA .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-udqOItb0WA .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-udqOItb0WA .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-udqOItb0WA .carousel-control {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-udqOItb0WA .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-udqOItb0WA .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-udqOItb0WA .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-udqOItb0WA .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-udqOItb0WA .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-udqOItb0WA .carousel-indicators li.active,
+.cid-udqOItb0WA .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-udqOItb0WA .carousel-indicators li::after,
+.cid-udqOItb0WA .carousel-indicators li::before {
+  content: none;
+}
+.cid-udqOItb0WA .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-udqOItb0WA .carousel-indicators {
+    display: none !important;
+  }
 }
