--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -704,6 +704,10 @@ body {
 a {
   transition: color 0.6s;
 }
+.cid-s48MCQYojq {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
 .cid-s48MCQYojq .mbr-section-title {
   text-align: center;
   color: #e43f3f;
