--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -735,6 +735,37 @@ a {
   position: absolute;
   top: 0;
 }
+.cid-uiTbsTABXd {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #130f0f;
+}
+.cid-uiTbsTABXd .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uiTbsTABXd .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 991px) {
+  .cid-uiTbsTABXd .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-uiTbsTABXd .row {
+  flex-direction: row-reverse;
+}
+.cid-uiTbsTABXd img {
+  width: 100%;
+}
+.cid-uiTbsTABXd .mbr-description {
+  color: #ffffff;
+}
 .cid-ufraZ8ZgtS {
   padding-top: 6rem;
   padding-bottom: 6rem;
