--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -946,6 +946,45 @@ a {
     margin-right: 2rem !important;
   }
 }
+.cid-usNd4K4CMI {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/logo-title-png-1770x690.png");
+}
+.cid-usNd4K4CMI .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-usNd4K4CMI .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 991px) {
+  .cid-usNd4K4CMI .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-usNd4K4CMI img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-usNd4K4CMI .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-usNd4K4CMI .mbr-text {
+  color: #ffffff;
+}
+.cid-usNd4K4CMI .mbr-section-title {
+  color: #e6c63b;
+}
+.cid-usNd4K4CMI .mbr-description {
+  color: #e6c63b;
+}
 .cid-ubzLC2tpVA {
   padding-top: 5rem;
   padding-bottom: 6rem;
@@ -1039,7 +1078,7 @@ a {
   margin: auto;
 }
 .cid-s48OLK6784 .iconfont-wrapper {
-  color: #000000 !important;
+  color: #ffffff !important;
   font-size: 1.5rem;
   padding-right: .5rem;
 }
